Completed MsMaterialDscPart editor

--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-material-dsc-part/ms-material-dsc-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-material-dsc-part/ms-material-dsc-part.component.html
@@ -132,12 +132,12 @@
           <div>
             <button
               type="button"
-              mat-icon-button
+              mat-stroked-button
               color="primary"
               matTooltip="Add palimpsest"
               (click)="addPalimpsest()"
             >
-              <mat-icon>add_circle</mat-icon>
+              <mat-icon>add_circle</mat-icon> add
             </button>
           </div>
           <table *ngIf="palimpsests?.length">
