Aesthetic changes in MsContent template

--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-content/ms-content.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-content/ms-content.component.html
@@ -71,7 +71,7 @@
 
   <div>
     <!-- note -->
-    <mat-form-field>
+    <mat-form-field class="long-text">
       <textarea
         matInput
         [formControl]="note"
@@ -94,6 +94,7 @@
           color="primary"
           (click)="addUnit()"
         >
+          <mat-icon>add_circle</mat-icon>
           add unit
         </button>
       </div>
