--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-hands-part/ms-hands-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-hands-part/ms-hands-part.component.html
@@ -80,7 +80,7 @@
                 <td>{{ h.id }}</td>
                 <td>{{ locationToString(h.start) }}</td>
                 <td>{{ locationToString(h.end) }}</td>
-                <td>h.rubrications?.length || 0</td>
+                <td>{{ h.rubrications?.length || 0 }}</td>
               </tr>
             </tbody>
           </table>
