--- a/projects/myrmidon/cadmus-itinera-ui/src/lib/components/physical-size/physical-size.component.html
+++ b/projects/myrmidon/cadmus-itinera-ui/src/lib/components/physical-size/physical-size.component.html
@@ -18,9 +18,7 @@
     </mat-form-field>
 
     <!-- label -->
-    <span [ngClass]="form.valid ? 'label-ok' : 'label-err'" *ngIf="label">{{
-      label
-    }}</span>
+    <span class="label" *ngIf="label">{{ label }}</span>
   </div>
 
   <!-- w -->
